# chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
.github/workflows/: cmake.yml  main.yml  super-linter.yml
src/: board.cpp  board.h  chess.cpp  game.cpp  game.h  main.cpp  move.cpp  move.h  player.cpp  player.h
src/chess/: Board.h  board.cpp  board.h  game.h  helpers.h  move.cpp  move.h  moveValidator.cpp  moveValidator.h
src/movement/: move.cpp  move.h  moveGenerator.h  moveUtils.cpp  moveUtils.h  moveValidator.cpp  moveValidator.h  path.cpp  path.h
src/utils/: attackVector.cpp  attackVector.h  moveValidator.cpp  moveValidator.h  utils.h
